--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "A blank repo with some basic configs I like.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "Justin Wayne",
   "license": "ISC",
   "devDependencies": {
     "eslint": "^7.7.0",
     "eslint-config-prettier": "^6.11.0",
-    "prettier": "2.0.5"
-  }
+    "prettier": "2.0.5",
+    "jest": "^27.5.1"
+  },
+  "dependencies": {}
 }
