--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "eslint": "^7.7.0",
     "eslint-config-prettier": "^6.11.0",
     "prettier": "2.0.5",
-    "jest": "^27.5.1"
+    "jest": "^27.5.1",
+    "babel-jest": "^27.5.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@babel/core": "^7.17.5",
+    "@babel/preset-env": "^7.16.11"
+  }
 }
